# silver-sql-api

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: clients.py  queries.py
app/core/: __init__.py  auth.py  config.py
app/features/: __init__.py
app/features/client/: __init__.py  client_entity.py  client_repository.py  client_router.py  client_schemas.py  client_service.py
app/features/clients/: __init__.py  endpoints.py  models.py  service.py
app/features/queries/: __init__.py  endpoints.py  models.py  service.py
app/features/query/: __init__.py  query_router.py  query_schemas.py  query_service.py
app/models/: __init__.py  schemas.py
app/services/: client_service.py  query_service.py
app/shared/: __init__.py  config.py  db.py  models.py
